# rust_clipstash

./: .env  .gitignore  Cargo.toml  Dockerfile  Procfile  README.md  data.db
.github/workflows/: rust-clippy.yml  rust.yml
migrations/: api_key.sql  db_setup.sql
src/lib/: mod.rs
src/lib/data/: mod.rs  model.rs  query.rs
src/lib/domain/: maintenance.rs  mod.rs  time.rs
src/lib/domain/clip/: mod.rs
src/lib/domain/clip/field/: content.rs  expires.rs  hits.rs  mod.rs  password.rs  posted.rs  shortcode.rs  title.rs
src/lib/service/: action.rs  ask.rs  mod.rs
src/lib/web/: api.rs  ctx.rs  form.rs  hitcounter.rs  http.rs  mod.rs  renderer.rs
templates/: footer.hbs
